========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-04-18

  - Fixed #157: Building a price map with zero prices should not fail,
    especially when done accidentally.

  - Fixed #264: Converted zip compression in bake from using an external zip
    tool to using the 'zipfile' module packaged with Python. I'm doing this to
    fix the CI build as well.


2018-04-17

  - Fixed #265: Refined the timezone specification of the price sources. In
    doing this, I documented it in the beancount.prices.source module and now
    pass in a timezone-aware datetime instance instead of a date, and the source
    is now required to also require a timezone-aware datetime instance. I fixed
    all the tests, and added a utility to simulate running them from different
    timezones.

  - Implemented multi-file support for bean-doctor context command. Use it like
    this:

      bean-doctor context <toplevel.beancount> <file.beancount>:<lineno>

    The previous syntax is still supported; like this:

      bean-doctor context <toplevel.beancount> <lineno>


2018-04-05

  - Since I added a dependency on 'requests', forgot to add to checkdeps. Done.


2018-04-04

  - Handle error on an invalid implementation of a price source (e.g., in this
    case an obsoleted price source string of 'google' imports something else and
    referenceing .Source fails).

  - Bubble up error from Yahoo price source.

  - Fixed #267: Implemented a price source from the IEX exchange.


2018-04-03

  - Implemented Quandl importer on its REST API. Another implementation, based
    on the Quandl Python client API was proposed by Hugo Ideler (see PR34), but
    I didn't want to add a dependency on the client library (nor on Pandas), and
    after reading the description on Quandl API's website, I figured the library
    was simple enough the output could be parsed directly. I wrote a new